--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Revision</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.pink.min.css"
+  >"
+
 </head>
+
 <body>
     <header>
-
+        <nav>
+            <ul>
+              <li><strong>Web Revision</strong></li>
+            </ul>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Form</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </nav>
     </header>
 
     <main>
