--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- data theme set the light dark theme for my ebsite like the setting default of the browser will not affect the theme of my website -->
+<html lang="en" data-theme="light"> 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+
     <title>Web Revision</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.pink.min.css"
-  >"
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.classless.pink.min.css">
+
+    <link rel="stylesheet" href="css/style.css">
+
 
 </head>
 
@@ -16,15 +21,24 @@
               <li><strong>Web Revision</strong></li>
             </ul>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">Form</a></li>
-              <li><a href="#">About</a></li>
+              <!-- role use for accessibility -->
+              <li><a role="button" href="index.html"> Home</a></li>
+              <li><a role="button" href="form.html">  Form</a></li>
+              <li><a role="button" href="about.html"> About</a></li>
             </ul>
           </nav>
     </header>
 
     <main>
-        <h1>Hello World!</h1>
+
+        <section id="hero">
+          <h1>Hello World!</h1>
+        </section>
+
+        <section>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati possimus incidunt, odit quo officiis praesentium, unde deleniti quis corrupti et quaerat corporis, magni facere quibusdam odio adipisci blanditiis voluptatem. Voluptatibus?
+        </section>
+
     </main>
 
     <footer>
